--- a/css/style.css
+++ b/css/style.css
@@ -779,11 +779,8 @@ margin-top: 130px;
 /*facts*/
 #facts .btn-get-started{
   font-family: "Montserrat", sans-serif;
-
-font-weight: 500;
-
-font-size: 16px;services
-
+  font-weight: 500;
+  font-size: 16px;/*services*/
 letter-spacing: 1px;
 
 display: inline-block;
@@ -861,14 +858,14 @@ font-weight: 700;
 position: relative;
 padding-bottom: 15px;
 padding-top: 30px;
-margin-left:430px;
+/* margin-left:430px; */
 }
 
 
 #Registration .container .row h3{
 /*	font-family: "Montserrat";*/
 font-weight: 400;
-	margin-left: 220px;
+	/* margin-left: 220px; */
 	margin-top: 10px;
 }
 
@@ -1256,19 +1253,27 @@ font-weight: 400;
   -moz-transition:all 0.4s ease;
   transition:all 0.4s ease;
 }
-#team .container .row .main-team-head img{
-    margin-left:365px;
+#team .container .row .main-team-head{
+  margin-left:365px;
+}
+ #team .container .row .main-team-head img{
+    /* margin-left:365px; */
     border-radius: 50%;
     margin-top: 20px;
 }
-
+/*
+#team .head-team-info{
+  margin-left:365px;
+}
 #team .head-team-info .name h4{
-    margin-left:440px;
+    margin-left:0px;
+    text-align: center;
 }
 
 #team .head-team-info h5{
-    margin-left:390px;
-}
+    margin-left:0px;
+    text-align: center;
+} */
 
 #team .single-team {
   text-align: center;
@@ -1303,6 +1308,7 @@ font-weight: 400;
   bottom: 0;
   width: 100%;
   padding:10px;
+  
 }
 #team .team-info .name{
   margin-bottom:10px;
@@ -1626,4 +1632,20 @@ font-weight: 400;
   text-align: center;
   font-size: 13px;
   color: #ddd;
+}
+
+/*added by rh*/
+td{
+  text-align: center;
+}
+@media only screen and (max-width: 800px) {
+
+#team .container .row .main-team-head img{
+   
+    border-radius: 50%;
+    width: 300px;
+    height: 300px;
+}
+#team .container .row .main-team-head{
+  margin-left:auto;
 }
